built a skeleton for sceneFactory, still needs work. URGENT: SETUP JAVAFX